[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length=88
multi_line_output=3
include_trailing_comma=true

[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of code helper cli and library"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
readme="README.md"
homepage="https://github.com/iamsauravsharma/advent-of-code"
repository="https://github.com/iamsauravsharma/advent-of-code"

[tool.poetry.dependencies]
python = "^3.7"
click = "7.0"
appdirs="1.4.3"
requests="2.22.0"
python-dateutil="2.8.1"

[tool.poetry.dev-dependencies]
pytest = "5.2.3"
black = "19.10b0"
isort = "4.3.21"
prospector = {version = "1.1.7", extras = ["with_everything"]}
portray = "1.3.1"

[tool.poetry.scripts]
advent-of-code = "advent_of_code.cli:main"

[tool.portray]
modules=["advent_of_code"]

[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "black", accent = "indigo"}